Added debug system